--- a/q6/q6/index.html
+++ b/q6/q6/index.html
@@ -11,8 +11,25 @@
 </head>
 
 <body>
-  <!-- Q6回答はここから -->
-  <!-- Q6回答はここまで -->
+  <header class="header">
+    <div class="inner d--flex">
+      <div class="logo">
+        <a href="#">shop</a>
+      </div>
+      <div class="menu">
+        <nav>
+          <ul class="nav d--flex">
+            <li>
+              <a href="#">HOME</a>
+            </li>
+            <li>
+              <a href="#">Access</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
   <main>
     <div class="wrapper">
       <h1 class="title">基本レイアウト・パーツ</h1>
