--- a/q6/q6/index.html
+++ b/q6/q6/index.html
@@ -23,6 +23,9 @@
               <a href="#">HOME</a>
             </li>
             <li>
+              <a href="#">MenuList</a>
+            </li>
+            <li>
               <a href="#">Access</a>
             </li>
           </ul>
