--- a/q10/q10/index.html
+++ b/q10/q10/index.html
@@ -18,7 +18,7 @@
     <div class="flex--center">
       <div class="btn shadow--red">Button</div>
       <div class="btn shadow--blue">Button</div>
-      <div class="btn shadow--green">button</div>
+      <div class="btn shadow--green">Button</div>
     </div>
     <h3 class="question--title">Q10-2 影を付けたボタン</h3>
     <div class="flex--center">
