--- a/q10/q10/index.html
+++ b/q10/q10/index.html
@@ -16,9 +16,9 @@
   <div class="wrapper">
     <h3 class="question--title">Q10-1 フラットなボタン</h3>
     <div class="flex--center">
-      <div class="btn shadow--red">Button</div>
-      <div class="btn shadow--blue">Button</div>
-      <div class="btn shadow--green">Button</div>
+      <div class="btn btn--red">Button</div>
+      <div class="btn btn--blue">Button</div>
+      <div class="btn btn--green">Button</div>
     </div>
     <h3 class="question--title">Q10-2 影を付けたボタン</h3>
     <div class="flex--center">
